--- a/css/style.css
+++ b/css/style.css
@@ -84,25 +84,25 @@ body{
 }
 
 .main__block::before{
-    transition: 0.5s;
+    transition: 0.3s ;
     content: "";
     position: absolute;
-    width: 0;
-    height: 73px;
-    left: 0;
+    width: 100%;
+    height: 100px;
+    left: -100%;
     top: 0;
     background-color: #9C3F3F;
+    transform: skew(150deg);
 }
 
 .main__block:hover::before{
-    
-    background-color: rgb(225, 186, 12);
-    width: 100%;
-
+    background-color: #ec9393;
+    opacity: 0.3;
+    left: -50%;
 }
 
 .main__block:hover a{
-    color: #b41818;
+    color: #fb0b3b;
 }
 
 .main__block_width{
@@ -114,6 +114,7 @@ body{
     width:100%;
     height: auto;
     background-color: #9C3F3F;
+    overflow: hidden;
 }
 
 .main__block_width a{
@@ -127,23 +128,25 @@ body{
 }
 
 .main__block_width:hover a{
-    color: #b41818;
+    color: #fb0b3b;
 }
 
 .main__block_width::before{
-    transition: 0.4s;
+    transition: 0.5s ;
     content: "";
     position: absolute;
     width: 100%;
-    height: 0px;
-    left: 0;
+    height: 100px;
+    left: -100%;
     top: 0;
     background-color: #9C3F3F;
+    transform: skew(150deg);
 }
 
 .main__block_width:hover::before{
-    background-color: rgb(225, 186, 12);
-    height: 73px;
+    background-color: #ec9393;
+    opacity: 0.3;
+    left: -50%;
 
 }
 
