--- a/css/kickruki.css
+++ b/css/kickruki.css
@@ -105,7 +105,7 @@ width: 30px;
 }
 
 .burger-menu_active .burger-menu_nav {
-    right: -80%;
+    right: 0%;
     -webkit-transition: 0.8s;
     -moz-transition: 0.8s;
     -o-transition: 0.8s;
@@ -116,7 +116,7 @@ width: 30px;
     background: #9C3F3F;
     position: relative;
     z-index: 55;
-    text-align: left;
+    text-align: center;
     padding: 30px 20px;
     top: 50px;
     font-family: 'Roboto', sans-serif;
